--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blac_shade_1"
     tools:context=".MainActivity">
 
     <EditText
@@ -13,6 +14,9 @@
         android:ems="10"
         android:hint="@string/name"
         android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.371"
@@ -25,6 +29,9 @@
         android:layout_marginBottom="150dp"
         android:ems="10"
         android:hint="@string/password"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
@@ -37,6 +44,8 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:onClick="login"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -50,6 +59,8 @@
         android:layout_height="wrap_content"
         android:text="@string/registration"
         android:onClick="register"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -64,6 +75,8 @@
         android:layout_marginTop="12dp"
         android:onClick="loginAsGuest"
         android:text="@string/signInAsGuest"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +89,8 @@
         android:layout_marginTop="20dp"
         android:onClick="loginWithGoogle"
         android:text="@string/signInWithGoogle"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
