--- a/app/src/main/res/layout/currency_rv_item.xml
+++ b/app/src/main/res/layout/currency_rv_item.xml
@@ -39,6 +39,17 @@
             android:textColor="@color/white"
             android:textSize="13sp" />
 
+
+        <ImageButton
+            android:id="@+id/favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/idTVSymbol"
+            android:layout_marginEnd="13dp"
+            android:background="#00ffffff"
+            android:src="@drawable/ic_star" />
+
         <TextView
             android:id="@+id/idTVRate"
             android:layout_width="wrap_content"
