--- a/app/src/main/res/layout/currency_rv_item.xml
+++ b/app/src/main/res/layout/currency_rv_item.xml
@@ -41,14 +41,15 @@
 
 
         <ImageButton
-            android:id="@+id/favorite"
+            android:id="@+id/deleteCrypto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_below="@id/idTVSymbol"
             android:layout_marginEnd="13dp"
             android:background="#00ffffff"
-            android:src="@drawable/ic_star" />
+            android:tint="@color/white"
+            android:src="@drawable/ic_delete" />
 
         <TextView
             android:id="@+id/idTVRate"
